<resources>
    <string name="app_name">AppClean</string>
    <string name="title_details">Light, Fast And Smart</string>
    <string name="title_home">Home</string>
    <string name="title_tool">Toolbox</string>
    <string name="title_persional">Personal</string>
    <string name="junk_files">Junk files</string>
    <string name="cpu_cooler">CPU Cooler</string>
    <string name="phone_booster">Phone boost</string>
    <string name="antivirus">Antivirus</string>
    <string name="power_saving">Power Saving</string>
    <string name="data_manager">Data manager</string>
    <string name="app_lock">App Lock</string>
    <string name="smart_charge">Smart charge</string>
    <string name="message_security">Message security</string>
    <string name="smart_cleanup">Smart cleanup</string>
    <string name="deep_clean">Deep clean</string>
    <string name="app_uninstall">App Uninstall</string>
    <string name="game_booster">Game Booster</string>
    <string name="game">Game</string>
    <string name="notification_manager">Notification Manager</string>
    <string name="harassment_fillter">harassment fillter</string>
    <string name="speend_protector">Speend protector</string>
    <string name="payment_safe">Payment Safe</string>
    <string name="file_move">File Move</string>
    <string name="app_lock_des">Protect the privacy data and the property</string>
    <string name="smart_charge_des">Remind you charging state to avoid overcharge</string>
    <string name="message_security_des">Private messages will be protected and stored here</string>
    <string name="smart_cleanup_des">utomatically clean your phone to keep your phone always running best</string>
    <string name="deep_clean_des">Clean up files more deeply to release more space</string>
    <string name="app_uninstall_des">Rapidly uninstall useless apps</string>
    <string name="game_booster_des">Provide you faster and better game experience</string>
    <string name="notification_manager_des">Make messy notification bar fresh again</string>
    <string name="harassment_fillter_des">Away from harassment</string>
    <string name="speend_protector_des">Faster than 99% of user</string>
    <string name="payment_safe_des">Protect your payment security all the way</string>
    <string name="file_move_des">One-tap move files to SD card. Free more space</string>
    <string name="junk_files_des">Delete unnecessary data, cache files, redundancy, ads</string>
    <string name="cpu_cooler_des">Reduce device temperature to save battery</string>
    <string name="phone_booster_des">Improve performance, free up memory</string>
    <string name="antivirus_des">Scan and protect your phone in real time</string>
    <string name="power_saving_des">Stop unused apps to save battery</string>
    <string name="data_manager_des">Uninstall, manage applications</string>
    <string name="memory_used">Memory used</string>
    <string name="storage_used">Storage used</string>
    <string name="percent">%</string>
    <string name="clean_and_boost"><![CDATA[Clean & Boost]]></string>
    <string name="security_and_privacy"><![CDATA[Security & Privacy]]></string>
    <string name="has_protected_your_phone">%s has protected your phone %s day(s)</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="upgrade">Upgrade</string>
    <string name="share">Share</string>
    <string name="like_facebook">Like us on Facebook</string>
    <string name="scaning">Scanining……</string>
    <string name="apps">Apps</string>
    <string name="memory_kill_found">Memory killier found</string>
    <string name="boost">Boost</string>
    <string name="running_app">Running Apps</string>
    <string name="empty_item_select">You must select at least 1 item</string>
    <string name="sm_edge_device_optimized">Great! Solved the power problem.</string>
    <string name="clean">Clean</string>
    <string name="cooling">Cooling</string>
    <string name="try_it">Try</string>
    <string name="done">Done</string>
    <string name="protect_now">Protect now</string>
    <string name="save_now">Save now</string>
    <string name="further_optimize_cpu">To further optimize your CPU</string>
    <string name="cpu_heating_app">Cpu - Heating Apps</string>
    <string name="cool_down">Cool down</string>
    <string name="scaning_cpu">Scanning CPU ...</string>
    <string name="secretly_consuming_battery">Scretly consuming your battery</string>
    <string name="extend_battery_life">Extend battery file</string>
    <string name="battery_draining_app">Battery - draining Apps</string>
    <string name="analyzing_battery_usage">Analyzing Battery Usage</string>
    <string name="hibernation">"Hibernation..... "</string>
    <string name="find_and_grant">Find %s and grant %s</string>
    <string name="deep_boost">Deep save</string>
    <string name="content_permission_1">Please grant Accessibility to close tollowing auto start apps. Acceleration could be increased by 50%</string>
    <string name="normal_boost">Normal save</string>
    <string name="grant_now">Grant Now</string>
    <string name="grant_app_permission">Grant App Usage Permission for a comprehensive phone scan effect</string>
    <string name="permission_needed">Permission Needed</string>
<string name="lockscreen_access_pattern_cell_added">Added cell</string>
    <string name="lockscreen_access_pattern_start">Draw unlock pattern</string>
    <string name="lockscreen_access_pattern_detected">Pattern has been saved </string>
    <string name="lockscreen_access_pattern_cleared">Pattern has been deleted </string>
    <string name="lock_recording_intro_header">Set the App\'s unlock pattern</string>
    <string name="lock_settings_help_how_to_record">How to draw an unlock pattern</string>
    <string name="lock_recording_incorrect_too_short">You should connect at least 4 points.</string>
    <string name="lock_pattern_entered_header">Record pattern</string>
    <string name="lock_need_to_confirm">Draw the pattern again to confirm</string>
    <string name="lock_need_to_unlock_wrong">The pattern do not match. Please try again.</string>
    <string name="password_gestrue_tips">Draw pattern to unlock</string>
    <string name="password_error_count">The pattern does not match. Please try again.</string>
<string name="lock_pattern_confirmed_header">Confirmed Pattern</string>
    <string name="password_question_01">What is your most memorable thing?</string>
    <string name="password_question_02">"What's the name of your favorite pet?"</string>
    <string name="password_question_03">Who is your girlfriend?</string>
    <string name="password_question_04">What was your dream when you were a child?</string>
    <string name="password_question_05">If you had a crush on someone of the same gender, who is she/he?</string>
    <string name="password_question_06">"What's the name of your favorite teacher in high school?"</string>
    <string name="password_question_07">Where would you like to visit when you were a child?</string>
    <string name="password_question_08">If you could travel back in time, when would you like to go?</string>
    <string name="password_question_09">Who is your boyfriend?</string>
    <string name="security_settings">Security Settings</string>
    <string name="sercurity_question">Security Question</string>
    <string name="answer">Answer:</string>
    <string name="input_your_answer">Input your answer</string>
    <string name="answer_blank">Answer can not blank</string>
    <string name="password_answer_set_toast">Security Question and Answer have been set.</string>
    <string name="forgot_gesture">Forgot Gesture</string>
    <string name="answer_question_error">Security answer question error</string>
    <string name="not_setup_answer_question">You don\'t setup answer quesion security</string>
    <string-array name="lock_time_array">        
        <item>15 seconds</item>        
        <item>30 seconds</item>        
        <item>1 minute</item>        
        <item>3 minutes</item>        
        <item>5 minutes</item>      
        <item>10 minutes</item>        
        <item>30 minutes</item>        
        <item>Immediately </item>    
    </string-array>
    <string name="welcome_to_the_app_lock">Welcome to the App lock</string>
    <string name="reset">Reset</string>
    <string name="search_application">Search Apps</string>
    <string name="lock_settings">Lock Settings</string>
    <string name="lock_immediately_after_locking_the_screen">Lock app immediately locking the phone</string>
    <string name="change_the_password">Change the pattern</string>
    <string name="hide_pattern">Hide pattern</string>
    <string name="search_applications">Search Apps&#8230;</string>
    <string name="search_for">Search For&#8230;</string>
    <string name="_1_minute">1 minute</string>
    <string name="accessibility_service_description">Tap on top right use to Accessiblility service.
        \n
        \nThis will allow AppClean to:
        \n
    \n- Deep clean hidden junk
    \n- Hibernate draining apps
        \n
    \nYou will have to accept Android system warinings when enabling Accessibility service. Clean master will not use these for any orther purpose than listed here.</string>
    <string name="intruder_selfie">Intruder Selfie</string>
    <string name="vibrate">Vibration</string>
    <string name="app_runing_background">App is running in background</string>
    <string name="app_background_task">This app background task</string>
    <string name="create_password">Create Password</string>
    <string name="create_pattern_lock">Create a pattern lock</string>
    <string name="on_off">ON / OFF</string>
    <string name="skip_app_title">The selected applications will not be canceled during the cleanup</string>
    <string name="app_protect">Application protected</string>
    <string name="list_app_skip">List Ignore</string>
    <string name="ram">Ram</string>
    <string name="ready_boost">Ready accelerate</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="notification_created_shortcut">Shortcut %s created</string>
    <string name="list_game">Game list</string>
    <string name="select_game_to_boost">Select game to accelerate</string>
    <string name="app_not_exist">Application not exist</string>
    <string name="smart_charger_can_help">Smart charger can help you</string>
    <string name="optimize_chargin_progress">Optimize your charging process</string>
    <string name="remind_charger">Real time reminder to help you avoid \n overcharging</string>
    <string name="turn_on">Turn on now</string>
    <string name="notification_toggle">Notification Toggle</string>
    <string name="notification_setting">Notification Settings</string>
    <string name="junk_reminder">Junk Reminder Frequency</string>
    <string name="phone_boost_reminder">Phone Boost Reminder</string>
    <string name="remind_when_memory">Remind when memory overusing</string>
    <string name="cpu_cooler_reminder">CPU Cooler Reminder</string>
    <string name="remind_me_when_cpu">Remind me when CPU overheating</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="remind_me_when_app_draing">Remind me when apps draning battery</string>
    <string name="app_install">App install</string>
    <string name="delete_the_apk">Delete the APK file after app installed</string>
    <string name="delete_the_residual">Delete the residual junk after app uninstalled</string>
    <string name="antivirus_settings">Antivirus Settings</string>
    <string name="real_time_protection">Real-time Protection</string>
    <string name="ignore_list">Ignore List</string>
    <string name="do_not_distub">Do not dissturb</string>
    <string name="general_settings">General Settings</string>
    <string name="create_home_shortcut">Create home screen shortcut</string>
    <string name="every_day">Every day</string>
</resources>