<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_10sdp"
    android:orientation="vertical"
    tools:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="@dimen/_50sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="@string/notification_setting"
        android:textColor="@color/color_a5a5ff"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:id="@+id/ll_junk_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_1f1137"
        android:gravity="center_vertical"
        android:minHeight="@dimen/_50sdp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/junk_reminder"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/tv_time_junk_remind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_day"
            android:textColor="@color/color_726882"
            android:textSize="@dimen/_10sdp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/color_1f1137"
        android:gravity="center_vertical"
        android:minHeight="@dimen/_50sdp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_boost_reminder"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remind_when_memory"
                android:textColor="@color/color_726882"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_phone_boost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Custom.Widget.SwitchCompat" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/color_1f1137"
        android:gravity="center_vertical"
        android:minHeight="@dimen/_50sdp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpu_cooler_reminder"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remind_me_when_cpu"
                android:textColor="@color/color_726882"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_cpu_cooler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Custom.Widget.SwitchCompat" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/color_1f1137"
        android:gravity="center_vertical"
        android:minHeight="@dimen/_50sdp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/battery_saver"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remind_me_when_app_draing"
                android:textColor="@color/color_726882"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_battery_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Custom.Widget.SwitchCompat" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/color_1f1137"
        android:gravity="center_vertical"
        android:minHeight="@dimen/_50sdp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_install"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_the_apk"
                android:textColor="@color/color_726882"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_install_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Custom.Widget.SwitchCompat" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/color_1f1137"
        android:gravity="center_vertical"
        android:minHeight="@dimen/_50sdp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_uninstall"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_the_residual"
                android:textColor="@color/color_726882"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_uninstall_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Custom.Widget.SwitchCompat" />

    </LinearLayout>

</LinearLayout>