<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/bg_smart_charger_heart" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_charger_can_help"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/optimize_chargin_progress"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp"
            app:drawableLeftCompat="@drawable/ic_round_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:drawablePadding="@dimen/_5sdp"
            android:text="@string/remind_charger"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp"
            app:drawableLeftCompat="@drawable/ic_round_white" />

        <TextView
            android:id="@+id/tv_turn_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/btn_primary_round"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/turn_on"
            android:textAllCaps="true"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <ImageView
        android:id="@+id/ic_close"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/_5sdp"
        app:srcCompat="@drawable/ic_close_white_24dp" />

</RelativeLayout>